samples/_failures_safe/1761490328_b21a67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dabf009.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_8dabf009.c:116:5: error: expected identifier at end of input
  116 |     printf("Info count: %d\n", analyzer->
      |     ^~~~~~
./samples/SAFE/__tmp_8dabf009.c:116:5: error: expected declaration or statement at end of input
